go/static/css/mtv.css
body {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

#header { 
    text-align: center;
    margin: 0.5em;
}

#navbar {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 1em;
    gap: 1em;
}

.navbarbtn {
    background: #282828;
    color: #f0f0f0;
    border: none;
    padding: 0.75em 1.5em;
    border-radius: 12px;
    cursor: pointer;
    font-size: 1em;
    transition: background 0.3s ease;
}
        
.img-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 1em;
    padding: 2em;
}
        
.img-grid img {
    width: 100%;
    border-radius: 8px;
    background: #222;
}

.media-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 1em;
    padding: 2em;
    margin-left: auto;
    margin-right: auto;
}

.media-grid-item {
    background: #282828;
    border-radius: 8px;
    padding: 1em;
    text-align: center;
    transition: background 0.3s ease;
    text-decoration: none;
    color: #f0f0f0;
}

.mov-images-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

.mov-img {
    width: 180px;
    height: 260px;
    object-fit: cover;
    border-radius: 8px;
    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
}

